k8s-yaml-files/delete-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delete-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30004
  selector:
    app: delete-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delete-service
  template:
    metadata:
      labels:
        app: delete-service
    spec:
      containers:
        - name: delete-service
          image: sebastianarce/delete-golang
          ports:
            - containerPort: 8080
