k8s-yaml-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-kube-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: golang-kube.local
      http:
        paths:
          - path: /create/?(.*)
            pathType: Prefix
            backend:
              service:
                name: create-service
                port:
                  number: 8080
          - path: /read/?(.*)
            pathType: Prefix
            backend:
              service:
                name: read-service
                port:
                  number: 8080
          - path: /update/?(.*)
            pathType: Prefix
            backend:
              service:
                name: update-service
                port:
                  number: 8080
          - path: /delete/?(.*)
            pathType: Prefix
            backend:
              service:
                name: delete-service
                port:
                  number: 8080
